--- a/index.html
+++ b/index.html
@@ -300,19 +300,38 @@
          </section>
          <section class="start-section hire-section">
             <div class="inner-section">
-               <div class="header-section section-title programs-title">
-                  <span class="green-arrow">></span> Hire Talent
-               </div>
+               <div class="header-section section-title hire-title"><span class="green-arrow">></span> Hire Talent</div>
                <div class="circles">
                   <div class="circle-div-h"></div>
                   <div class="circle-div-h"></div>
                   <div class="circle-div-h"></div>
                </div>
             </div>
+            <div class="hire-container">
+               <div class="upper-container-hire">
+                  <h1>Become a Recruitment Partner</h1>
+                  <div class="hire-section-span">
+                     220+ companies from over 10 countries have joined our network since 2016
+                  </div>
+                  <ol class="oredered-hire-list">
+                     <li>Exclusive, direct, and streamlined access to our graduating cycles</li>
+                     <li>Candidate insights from instructors and personalized recommendations</li>
+                     <li>Interviews at will</li>
+                     <li>Tech talks participation and engagement with students opportunities</li>
+                  </ol>
+                  <p>Are you on the hunt for exceptional rising junior developers? Look no further than SE Factory!</p>
+                  <div class="contact-hire-btn">CONTACT US ></div>
+               </div>
+               <div class="lower-container">
+                  <p>Want to launch a local team ?</p>
+                  <p>check out</p>
+                  <div class="img-hr"><img src="./assets/img/hr-factory.svg" alt="" /></div>
+               </div>
+            </div>
          </section>
          <section class="start-section testimonials">
             <div class="inner-section">
-               <div class="header-section section-title programs-title">
+               <div class="header-section section-title testimonial-title">
                   <span class="green-arrow">></span> Testimonials
                </div>
                <div class="circles">
@@ -321,10 +340,61 @@
                   <div class="circle-div-t"></div>
                </div>
             </div>
+            <div class="testimonial-container">
+               <div class="upper-testimonial">
+                  <div class="testimonial-slide">
+                     <div class="inner-testimonial-slide">
+                        <p>
+                           Growing up, I saw that every girl that had taken interest in anything technical or scientific
+                           had been undermined and underestimated in her field. That isn't fair, breaking this
+                           stereotype is a must. The first step I took towards doing this was to join SEF, a bootcamp
+                           that supported diversity and inclusion.
+                        </p>
+                        <img src="./assets/img/testimonial-1.png" alt="" />
+                     </div>
+                  </div>
+                  <div class="testimonial-slide">
+                     <div class="inner-testimonial-slide">
+                        <p>
+                           Looking back, I cannot believe that only a year ago, I knew almost nothing about programming,
+                           and now I am a professional software engineer working remotely for a startup located in
+                           Norway. The boot camp was a life-changing experience for me.
+                        </p>
+                        <img src="./assets/img/testimonial-2.png" alt="" />
+                     </div>
+                  </div>
+                  <div class="testimonial-slide">
+                     <div class="inner-testimonial-slide">
+                        <p>
+                           Hiring skilled engineers has never been easy. With SE Factory, this became super easy and
+                           effective. Candidates are well-trained and we get to see their strengths before hiring, which
+                           is perfect for a growing startup.
+                        </p>
+
+                        <img src="./assets/img/testimonial-3.jpeg" alt="" />
+                     </div>
+                  </div>
+                  <div class="testimonial-slide">
+                     <div class="inner-testimonial-slide">
+                        <p>
+                           Our business is expanding thanks to talented and dedicated team members that we hired through
+                           SE Factory. Looking forward to hiring more developers from them as we grow. ‍
+                        </p>
+                        <img src="./assets/img/testimonial-4.jpeg" alt="" />
+                     </div>
+                  </div>
+               </div>
+               <div class="testimonial-dots">
+                  <span class="dot"></span>
+                  <span class="dot"></span>
+                  <span class="dot"></span>
+                  <span class="dot"></span>
+               </div>
+            </div>
          </section>
          <section class="start-section faqs">
             <div class="inner-section">
-               <div class="header-section section-title programs-title"><span class="green-arrow">></span> FAQS</div>
+               <div class="header-section section-title faq-title"><span class="green-arrow">></span> FAQS</div>
                <div class="circles">
                   <div class="circle-div-h"></div>
                   <div class="circle-div-h"></div>
