added FAQ + contact us html

--- a/index.html
+++ b/index.html
@@ -401,6 +401,44 @@
                   <div class="circle-div-h"></div>
                </div>
             </div>
+
+            <div class="faq-container">
+               <div class="faq-item">
+                  <div class="faq-question">
+                     <span class="green-arrow">></span>What is the Difference Between the FSW Bootcamp &amp; the FCS
+                     Program?
+                  </div>
+                  <div class="faq-answer">
+                     FCS covers the foundational concepts of programming. It’s a starting point for those new to
+                     programming or a refresher for those who studied computer science before. Knowledge of the concepts
+                     provided in FCS is required for FSW. It can also be taken ‘informally’ for free if you do not plan
+                     to continue to FSW Bootcamp or you are unable to commit to the online courses via Udemy: Free
+                     Computer Science Tutorial - Foundations of Computer Science: Theory and Practice. The FSW Bootcamp
+                     offers holistic training in web development (coding, designing, testing, and bug fixing). It
+                     tackles advanced technical concepts and offers soft skills training that prepares you for the job
+                     market. FCS requires only a part-time commitment, and FSW requires a full-time commitment. Please
+                     note that both are intensive and require your commitment and dedication
+                  </div>
+               </div>
+
+               <div class="faq-item">
+                  <div class="faq-question"><span class="green-arrow">></span> Where do I apply?</div>
+                  <div class="faq-answer">
+                     Go to the Get Trained section of this website and select the appropriate program for you.
+                  </div>
+               </div>
+
+               <div class="faq-item">
+                  <div class="faq-question"><span class="green-arrow">></span>What programs do you offer?</div>
+                  <div class="faq-answer">
+                     We currently offer four programs: ‍ FCS: Foundations of Computer Science FSW: Full Stack Web
+                     Development FSD: Full Stack Data UIX: UI/UX Design Bootcamp ‍ Please, find the descriptions for
+                     each program below.
+                  </div>
+               </div>
+
+               <div id="view-all">View All ></div>
+            </div>
          </section>
          <section class="start-section contact-us">
             <div class="inner-section">
@@ -411,6 +449,64 @@
                   <div class="circle-div-p"></div>
                   <div class="circle-div-p"></div>
                   <div class="circle-div-p"></div>
+               </div>
+            </div>
+            <div class="contact-us-container">
+               <div class="directions">
+                  <p>> Get directions</p>
+                  <div class="map">maps</div>
+                  <div class="location">// SE Factory</div>
+               </div>
+               <div class="contact-form">
+                  <div class="form-header">
+                     <div class="topic">> Contact form</div>
+                     <div class="se-mail">info@sefactory.io</div>
+                     <p>Beirut Digital District BDD 1243 Basement (Floor -1)</p>
+                  </div>
+                  <div class="form-body">
+                     <div class="row">
+                        <div class="row-input">
+                           <div class="input-title">// first name</div>
+                           <input placeholder="First name" />
+                        </div>
+                        <div class="row-input">
+                           <div class="input-title">// Last name</div>
+                           <input placeholder="Last name" />
+                        </div>
+                     </div>
+                     <div class="row">
+                        <div class="row-input">
+                           <div class="input-title">// Email</div>
+                           <input placeholder="Email" />
+                        </div>
+                        <div class="row-input">
+                           <div class="input-title">// Phone number</div>
+                           <input placeholder="Phone number" />
+                        </div>
+                     </div>
+                     <div class="contact-programs">
+                        <p>// what can we help you with?</p>
+                        <div class="contact-program-titles">
+                           <input type="radio" />
+                           <h4>FCS</h4>
+                           <input type="radio" />
+                           <h4>FSW</h4>
+                           <input type="radio" />
+                           <h4>FCD</h4>
+                           <input type="radio" />
+                           <h4>UIX</h4>
+                           <input type="radio" />
+                           <h4>Hire Talent</h4>
+                           <input type="radio" />
+                           <h4>Other</h4>
+                        </div>
+                     </div>
+                     <div class="inquiry">
+                        <p>// inquiry</p>
+                        <input type="text-area" placeholder="what we can help you with?" />
+                     </div>
+                     <div class="contact-submit-btn">Submit</div>
+                  </div>
                </div>
             </div>
          </section>
