added partners section

--- a/index.html
+++ b/index.html
@@ -510,6 +510,7 @@
                </div>
             </div>
          </section>
+         <!--Partners section-->
          <section class="start-section partners">
             <div class="inner-section">
                <div class="header-section section-title programs-title">
@@ -519,6 +520,24 @@
                   <div class="circle-div-t"></div>
                   <div class="circle-div-t"></div>
                   <div class="circle-div-t"></div>
+               </div>
+            </div>
+            <div class="partners-container">
+               <div class="row-partners">
+                  <img src="./assets/img/alfanar.png" alt="" />
+                  <img src="./assets/img/life.png" alt="" />
+                  <img src="./assets/img/isdb.png" alt="" />
+                  <img src="./assets/img/spark.png" alt="" />
+                  <img src="./assets/img/gil.png" alt="" />
+                  <img src="./assets/img/netherlands.png" alt="" />
+               </div>
+               <div class="row-partners">
+                  <img src="./assets/img/abdulaziz.png" alt="" />
+                  <img src="./assets/img/unicef.png" alt="" />
+                  <img src="./assets/img/drosos.png" alt="" />
+                  <img src="./assets/img/giz.png" alt="" />
+                  <img src="./assets/img/german.png" alt="" />
+                  <img src="./assets/img/michelkhalaf.png" alt="" />
                </div>
             </div>
          </section>
