--- a/index.html
+++ b/index.html
@@ -196,9 +196,7 @@
           <div data-tab-content id="fcs-content" class="active">
             <div class="inner-container">
               <div class="inner-tab-left">
-                <span class="tab-span" data-span-color="var(--ylw_primary)" id="tab-span">> FCS:</span>
-                Foundations of Computer Science
-
+                <div class="tab-title"><span class="tab-span">> FCS:</span> Foundations of Computer Science</div>
                 <p class="tab-desc">
                   // This 9-week course covers fundamental topics in computer science, including data structures,
                   algorithms, and foundational concepts. It is suitable for coding enthusiasts, former computer science
@@ -215,7 +213,7 @@
                 </div>
               </div>
               <div class="inner-tab-right">
-                <img src="./assets/img/fcs-pic.png" alt="" width="300" height="300" />
+                <img src="./assets/img/fcs-pic.png" alt="" />
               </div>
             </div>
           </div>
@@ -238,7 +236,7 @@
                 </div>
               </div>
               <div class="inner-tab-right">
-                <img src="./assets/img/fsw-pic.png" alt="" width="300" height="300" />
+                <img src="./assets/img/fsw-pic.png" alt="" />
               </div>
             </div>
           </div>
@@ -260,7 +258,7 @@
                 </div>
               </div>
               <div class="inner-tab-right">
-                <img src="./assets/img/fsd-pic.png" alt="" width="300" height="300" />
+                <img src="./assets/img/fsd-pic.png" alt="" />
               </div>
             </div>
           </div>
@@ -282,7 +280,7 @@
                 </div>
               </div>
               <div class="inner-tab-right">
-                <img src="./assets/img/ui-pic.png" alt="" width="300" height="300" />
+                <img src="./assets/img/ui-pic.png" alt="" />
               </div>
             </div>
           </div>
@@ -368,7 +366,7 @@
               <div class="inner-testimonial-slide">
                 <p>
                   Our business is expanding thanks to talented and dedicated team members that we hired through SE
-                  Factory. Looking forward to hiring more developers from them as we grow. ‍
+                  Factory. Looking forward to hiring more developers from them as we grow.
                 </p>
                 <img src="./assets/img/testimonial-4.jpeg" alt="" />
               </div>
@@ -401,7 +399,7 @@
               <div class="arrow-down" id="arrow-down"><i class="fa fa-angle-down"></i></div>
             </div>
             <div class="faq-answer">
-              FCS covers the foundational concepts of programming. It’s a starting point for those new to programming or
+              FCS covers the foundational concepts of programming. It's a starting point for those new to programming or
               a refresher for those who studied computer science before. Knowledge of the concepts provided in FCS is
               required for FSW. It can also be taken ‘informally’ for free if you do not plan to continue to FSW
               Bootcamp or you are unable to commit to the online courses via Udemy: Free Computer Science Tutorial -
@@ -429,8 +427,8 @@
               <div class="arrow-down" id="arrow-down"><i class="fa fa-angle-down"></i></div>
             </div>
             <div class="faq-answer">
-              We currently offer four programs: ‍ FCS: Foundations of Computer Science FSW: Full Stack Web Development
-              FSD: Full Stack Data UIX: UI/UX Design Bootcamp ‍ Please, find the descriptions for each program below.
+              We currently offer four programs: FCS: Foundations of Computer Science FSW: Full Stack Web Development
+              FSD: Full Stack Data UIX: UI/UX Design Bootcamp Please, find the descriptions for each program below.
             </div>
           </div>
 
