responsive on 900px

--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@
           <div class="upper-container-hire">
             <h1>Become a Recruitment Partner</h1>
             <div class="hire-section-span">
-              220+ companies from over 10 countries have joined our network since 2016
+              <span class="green-color">220+</span> companies from over <span class="green-color">10</span> countries
+              have joined our network since <span class="green-color">2016</span>
             </div>
             <ol class="oredered-hire-list">
               <li>Exclusive, direct, and streamlined access to our graduating cycles</li>
@@ -330,7 +331,7 @@
         </div>
         <div class="testimonial-container">
           <div class="upper-testimonial">
-            <div class="testimonial-slide">
+            <div class="testimonial-slide active">
               <div class="inner-testimonial-slide">
                 <p>
                   Growing up, I saw that every girl that had taken interest in anything technical or scientific had been
@@ -453,7 +454,7 @@
           <div class="contact-form">
             <div class="form-header">
               <div class="topic">> Contact form</div>
-              <div class="se-mail">info@sefactory.io</div>
+              <div class="se-mail"><span class="green-color">info@sefactory.io</span></div>
               <p>Beirut Digital District BDD 1243 Basement (Floor -1)</p>
             </div>
             <div class="form-body">
@@ -534,7 +535,7 @@
       </section>
       <section class="news-letter">
         <div class="subscribe-text">
-          <h1>Subscribe to our newsletter</h1>
+          <h1>Subscribe to our <span class="green-color"> newsletter</span></h1>
           <p>and stay up-to-date with our latest news.</p>
         </div>
         <div class="email-section">
