edited css and responsiveness

--- a/index.html
+++ b/index.html
@@ -404,11 +404,11 @@
               a refresher for those who studied computer science before. Knowledge of the concepts provided in FCS is
               required for FSW. It can also be taken ‘informally’ for free if you do not plan to continue to FSW
               Bootcamp or you are unable to commit to the online courses via Udemy: Free Computer Science Tutorial -
-              Foundations of Computer Science: Theory and Practice. The FSW Bootcamp offers holistic training in web
-              development (coding, designing, testing, and bug fixing). It tackles advanced technical concepts and
-              offers soft skills training that prepares you for the job market. FCS requires only a part-time
-              commitment, and FSW requires a full-time commitment. Please note that both are intensive and require your
-              commitment and dedication
+              Foundations of Computer Science: Theory and Practice.<br /><br />
+              The FSW Bootcamp offers holistic training in web development (coding, designing, testing, and bug fixing).
+              It tackles advanced technical concepts and offers soft skills training that prepares you for the job
+              market. FCS requires only a part-time commitment, and FSW requires a full-time commitment. Please note
+              that both are intensive and require your commitment and dedication
             </div>
           </div>
 
@@ -428,8 +428,15 @@
               <div class="arrow-down" id="arrow-down"><i class="fa fa-angle-down"></i></div>
             </div>
             <div class="faq-answer">
-              We currently offer four programs: FCS: Foundations of Computer Science FSW: Full Stack Web Development
-              FSD: Full Stack Data UIX: UI/UX Design Bootcamp Please, find the descriptions for each program below.
+              We currently offer four programs:
+              <ul class="faq-list">
+                <li><span class="green-color">FCS:</span> Foundations of Computer Science</li>
+                <li><span class="green-color">FSW: </span> Full Stack Web Development</li>
+                <li><span class="green-color">FSD:</span> Full Stack Data</li>
+                <li><span class="green-color">UIX: </span>UI/UX Design Bootcamp</li>
+              </ul>
+
+              Please, find the descriptions for each program below.
             </div>
           </div>
 
@@ -447,9 +454,14 @@
         </div>
         <div class="contact-us-container">
           <div class="directions">
-            <p>> Get directions</p>
-            <div class="map">maps</div>
-            <div class="location">// SE Factory</div>
+            <div class="upper-directions">
+              <p>> Get directions</p>
+              <div class="map">maps</div>
+            </div>
+            <div class="lower-directions">
+              <div class="location">// SE Factory</div>
+              <div class="address">Beirut Digital District BDD 1243 Basement (Floor -1)</div>
+            </div>
           </div>
           <div class="contact-form">
             <div class="form-header">
@@ -498,8 +510,8 @@
               <div class="inquiry">
                 <p>// inquiry</p>
                 <input type="text-area" placeholder="what we can help you with?" />
+                <div class="contact-submit-btn">Submit</div>
               </div>
-              <div class="contact-submit-btn">Submit</div>
             </div>
           </div>
         </div>
