added map in directions

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
           <div class="directions">
             <div class="upper-directions">
               <p>> Get directions</p>
-              <div class="map">maps</div>
+              <div class="map"><img src="./assets/img/map.png" alt="" width="250" height="250" /></div>
             </div>
             <div class="lower-directions">
               <div class="location">// SE Factory</div>
