fixed nav menu to have its own logo and close icon with scroll

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./assets/img/seIcon.ico" />
-    <title>SE Factory</title>
+    <title>SE Factory - Want to become a software engineer?</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
@@ -23,6 +23,10 @@
   <body class="body">
     <main class="main-section">
       <div class="nav-menu">
+        <div class="inner-menu-nav">
+          <img src="/assets/img/se-logo.svg" alt="" />
+          <div class="nav-close-btn" id="nav-close-btn"><i class="fa fa-times"></i></div>
+        </div>
         <div class="inner-menu">
           <div class="left-menu">
             <ul>
