--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           </div>
         </div>
       </section>
-
+<!--tabs section-->
       <section class="start-section programs-section" id="tabs-section" data-default-color="">
         <div class="inner-section">
           <div class="header-section section-title programs-title"><span class="green-arrow">></span> Prorgrams</div>
@@ -290,6 +290,7 @@
           </div>
         </div>
       </section>
+      <!--hire section-->
       <section class="start-section hire-section">
         <div class="inner-section">
           <div class="header-section section-title hire-title"><span class="green-arrow">></span> Hire Talent</div>
@@ -322,6 +323,7 @@
           </div>
         </div>
       </section>
+      <!--testimonials section-->
       <section class="start-section testimonials">
         <div class="inner-section">
           <div class="header-section section-title testimonial-title">
@@ -385,6 +387,7 @@
           </div>
         </div>
       </section>
+      <!--faqs section-->
       <section class="start-section faqs-section">
         <div class="inner-section">
           <div class="header-section section-title faq-title"><span class="green-arrow">></span> FAQS</div>
@@ -447,6 +450,7 @@
           <div class="view-all">View All ></div>
         </div>
       </section>
+      <!--contact us section-->
       <section class="start-section contact-us">
         <div class="inner-section">
           <div class="header-section section-title programs-title"><span class="green-arrow">></span> Contact Us</div>
@@ -549,6 +553,7 @@
           </div>
         </div>
       </section>
+      <!--news letter section-->
       <section class="news-letter">
         <div class="subscribe-text">
           <h1>Subscribe to our <span class="green-color"> newsletter</span></h1>
@@ -559,6 +564,7 @@
           <div class="submit-newsletter">SUBSCRIBE</div>
         </div>
       </section>
+      <!--footer section-->
       <div class="footer-wrapper">
         <div class="links-section">
           <div class="page-links">
