added comment and 2 dots for the logo to display in github pages

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main class="main-section">
       <div class="nav-menu">
         <div class="inner-menu-nav">
-          <img src="/assets/img/se-logo.svg" alt="" />
+          <img src="../assets/img/se-logo.svg" alt="" />
           <div class="nav-close-btn" id="nav-close-btn"><i class="fa fa-times"></i></div>
         </div>
         <div class="inner-menu">
@@ -180,7 +180,7 @@
           </div>
         </div>
       </section>
-<!--tabs section-->
+      <!--tabs section-->
       <section class="start-section programs-section" id="tabs-section" data-default-color="">
         <div class="inner-section">
           <div class="header-section section-title programs-title"><span class="green-arrow">></span> Prorgrams</div>
