comment added . for the logo to dislpay to get displayed in github pages

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main class="main-section">
       <div class="nav-menu">
         <div class="inner-menu-nav">
-          <img src="../assets/img/se-logo.svg" alt="" />
+          <img src="./assets/img/se-logo.svg" alt="" />
           <div class="nav-close-btn" id="nav-close-btn"><i class="fa fa-times"></i></div>
         </div>
         <div class="inner-menu">
@@ -67,7 +67,7 @@
         <section class="hero-parent">
           <header>
             <nav>
-              <img src="/assets/img/se-logo.svg" alt="" />
+              <img src="./assets/img/se-logo.svg" alt="" />
               <div class="openMenu" id="nav-btn"><i class="fa fa-bars"></i></div>
             </nav>
           </header>
